--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,8 @@ div.container {
 div.header {
   height: auto;
   text-align: center;
-  background: slategrey;
+  /* background: slategrey; */
+  background: linear-gradient(35deg, slategrey, rgb(132, 159, 185));;
   color: ghostwhite;
   padding: 2.3rem 1rem 2.3rem 1rem;
   position: relative;
