--- a/style.css
+++ b/style.css
@@ -200,3 +200,22 @@ svg {
 a {
   text-decoration: underline;
 }
+
+.yt-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+.yt-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  transition: all 0.25s ease-in-out;
+  box-shadow: 2px 1px 8px 2px rgb(0 0 0 / 50%);
+  /* bit of a hack to hide the timeline */
+  z-index: 2; 
+}
