--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ div.header {
   height: auto;
   text-align: center;
   /* background: slategrey; */
-  background: linear-gradient(35deg, slategrey, rgb(132, 159, 185));;
+  background: linear-gradient(35deg, slategrey, rgb(132, 159, 185));
   color: ghostwhite;
   padding: 1.3rem 1rem 2.3rem 1rem;
   position: relative;
@@ -198,7 +198,12 @@ svg {
 }
 
 a {
-  text-decoration: underline;
+  text-decoration: none;
+  border-bottom: 1px solid hsl(210, 28%, 44%);
+  box-shadow: inset 0 -2px 0 hsl(210deg 28% 44%);
+  color: inherit;
+  transition: background 0.1s cubic-bezier(0.33, 0.66, 0.66, 1);
+  color: hsl(210deg 28% 44%)
 }
 
 .yt-container {
@@ -217,5 +222,5 @@ a {
   transition: all 0.25s ease-in-out;
   box-shadow: 2px 1px 8px 2px rgb(0 0 0 / 50%);
   /* bit of a hack to hide the timeline */
-  z-index: 2; 
+  z-index: 2;
 }
