--- a/style.css
+++ b/style.css
@@ -224,3 +224,11 @@ a {
   /* bit of a hack to hide the timeline */
   z-index: 2;
 }
+
+.easeload{
+  opacity: 0;
+  -webkit-transition: all 2s ease; 
+  -moz-transition: all 2s ease; 
+  -ms-transition: all 2s ease; 
+  -o-transition: all 2s ease; 
+}
