--- a/style-modal.css
+++ b/style-modal.css
@@ -10,8 +10,9 @@
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+  background-color: rgba(0, 0, 0, 0.95); /* Black w/ opacity */
   backdrop-filter: blur(16px);
+  overflow: hidden;
 }
 
 /* Modal Content (Image) */
