--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ a {
   box-shadow: inset 0 -2px 0 hsl(210deg 28% 44%);
   color: inherit;
   transition: background 0.1s cubic-bezier(0.33, 0.66, 0.66, 1);
-  color: hsl(210deg 28% 44%)
+  color: hsl(210deg 28% 44%);
 }
 
 .yt-container {
@@ -225,10 +225,68 @@ a {
   z-index: 2;
 }
 
-.easeload{
+.easeload {
   opacity: 0;
-  -webkit-transition: all 2s ease; 
-  -moz-transition: all 2s ease; 
-  -ms-transition: all 2s ease; 
-  -o-transition: all 2s ease; 
+  -webkit-transition: all 2s ease;
+  -moz-transition: all 2s ease;
+  -ms-transition: all 2s ease;
+  -o-transition: all 2s ease;
+}
+
+.easeload-gallery {
+  opacity: 0;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  /* background: #fff; */
+  /* background-color: rgb(0, 0, 0); */
+  /* background-color: rgba(0, 0, 0, 0.9);  */
+  /* backdrop-filter: blur(16px); */
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 95%;
+  height: 95%;
+  object-fit: contain;
+  /* add this for svg background! */
+  /* background-color: white; */
+}
+
+.swiper {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.swiper-pagination-bullet {
+  background-color: hsl(210, 28%, 44%) !important;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: hsl(210, 28%, 44%) !important;
 }
