--- a/style-gallery.css
+++ b/style-gallery.css
@@ -22,6 +22,7 @@
     border-radius: 8px;
     transition: all 0.25s ease-in-out;
     box-shadow: 2px 1px 8px 2px rgb(0 0 0 / 50%);
+    cursor: pointer;
 }
 .grid-container div p {
     margin: 5px 0;
