--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
 @import url(https://fonts.googleapis.com/css?family=Fira+Sans:200,400,500);
+@font-face {
+  font-family: 'icomoon';
+  src:  url('./assets/fonts/icomoon.eot?fdnigd');
+  src:  url('./assets/fonts/icomoon.eot?fdnigd#iefix') format('embedded-opentype'),
+    url('./assets/fonts/icomoon.ttf?fdnigd') format('truetype'),
+    url('./assets/fonts/icomoon.woff?fdnigd') format('woff'),
+    url('./assets/fonts/icomoon.svg?fdnigd#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
 * {
   border: 0;
   margin: 0;
@@ -205,6 +217,13 @@ a {
   color: inherit;
   transition: background 0.1s cubic-bezier(0.33, 0.66, 0.66, 1);
   color: hsl(210deg 28% 44%);
+}
+a:after {
+  /* <div class="icon-" style="font-family: icomoon; display: inline; font-size: 0.9em"></div>  */
+  content: "";
+  font-family: icomoon; 
+  display: inline; 
+  font-size: 0.9em"
 }
 
 .yt-container {
