--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ div.header {
   /* background: slategrey; */
   background: linear-gradient(35deg, slategrey, rgb(132, 159, 185));
   color: ghostwhite;
-  padding: 1.3rem 1rem 2.3rem 1rem;
+  padding: 1rem 0rem 2rem 0rem;
   position: relative;
 }
 
@@ -502,4 +502,10 @@ h2:has(> .switch)::before {
 /* Move thumb to bottom on 'projects' view */
 .toggle-switch-vertical.projects .toggle-thumb {
   top: calc(100% - 42px); /* 100% - thumb size - padding */
+}
+
+hr.minimal {
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0));
 }
